[project]
name = "reglab"
version = "0.1.0"
description = "Regression & Failure Analysis Platform (Aerospace-coded)"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "duckdb>=1.0.0",
  "pandas>=2.0",
  "pydantic>=2.6",
  "jinja2>=3.1",
  "streamlit>=1.32",
]

[project.scripts]
reglab = "reglab.cli.main:app"

[tool.ruff]
line-length = 100
